--- a/form1.html
+++ b/form1.html
@@ -30,9 +30,9 @@
                 <input type="date" name="tgllahir"><br><br>
                 <!-- radio button -->
                 <label for="akrom"><b>Jenis kelamin</b></label>
-                <input type="radio" name="akrom">
+                <input type="radio" name="mulaimi">
                 <label for="">Laki-Laki</label>
-                <input type="radio" name="akrom">
+                <input type="radio" name="mulaimi">
                 <label for="">Perempuan</label>
                 <br><br>
                 <!-- seleck boxs -->
